Implemented the play-btn and its corresponding functions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <body>
         <h1 id="timer-el"></h1>
-        <button id="work-btn" type="button" onclick="workStart()">Work Start</button>
+        <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
+        <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
         <script src="index.js"></script>
     </body>
 </html>
