--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
 
     <body>
-        <h1 id="timer-el"></h1>
-        <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
-        <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
+        <div class="container">
+            <h1 id="timer-el"></h1>
+            <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
+            <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
