--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
-    <body>
+    <body id="body" class="animatedBackgroundChange">
         <div class="container">
-            <h1 id="timer-el"></h1>
-            <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
-            <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
+            <h1>Work Hard, Play Hard.</h1>
+            <h2 id="timer-el"></h2>
+            <div class="buttonsContainer">
+                <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
+                <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
+                <button id="reset-btn" class="animatedBackgroundChange" type="button" onclick="reset()">Reset</button>
+            </div>
+            
         </div>
         <script src="index.js"></script>
     </body>
