--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <body id="body" class="animatedBackgroundChange">
         <div class="container">
-            <h1>Work Hard, Play Hard.</h1>
+            <h1><span class="biggerWork">WORK</span> Hard, <span class="biggerPlay">PLAY</span> Hard.</h1>
             <h2 id="timer-el"></h2>
             <div class="buttonsContainer">
-                <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
-                <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
+                <button id="work-btn" class="animatedBackgroundChange" type="button" onclick="workStart()">Start Working</button>
+                <button id="play-btn" class="animatedBackgroundChange" type="button" onclick="playStart()">Start Playing</button>
                 <button id="reset-btn" class="animatedBackgroundChange" type="button" onclick="reset()">Reset</button>
             </div>
             
