--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body id="body" class="animatedBackgroundChange">
         <div class="container">
-            <h1><span class="biggerWork">WORK</span> Hard, <span class="biggerPlay">PLAY</span> Hard.</h1>
+            <h1><span class="bigger">WORK</span> Hard, <span class="bigger">PLAY</span> Hard.</h1>
             <h2 id="timer-el"></h2>
             <div class="buttonsContainer">
                 <button id="work-btn" class="animatedBackgroundChange" type="button" onclick="workStart()">Start Working</button>
