--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body id="body" class="animatedBackgroundChange">
         <div class="container">
             <h1><span class="bigger">WORK</span> Hard, <span class="bigger">PLAY</span> Hard.</h1>
-            <h2 id="timer-el"></h2>
+            <h2 id="timer-el" class="colorChange"></h2>
             <div class="buttonsContainer">
-                <button id="work-btn" class="animatedBackgroundChange" type="button" onclick="workStart()">Start Working</button>
-                <button id="play-btn" class="animatedBackgroundChange" type="button" onclick="playStart()">Start Playing</button>
-                <button id="reset-btn" class="animatedBackgroundChange" type="button" onclick="reset()">Reset</button>
+                <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
+                <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
+                <button id="reset-btn" type="button" onclick="reset()">Reset</button>
             </div>
             
         </div>
