Added media queries for responsive design + CSS touchups

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <title>Work Hard, Play Hard.</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
 
     <body id="body" class="animatedBackgroundChange">
         <div class="container">
-            <h1><span class="bigger">WORK</span> Hard, <span class="bigger">PLAY</span> Hard.</h1>
+            <h1><div><span id="work-text" class="bigger colorChange">WORK</span> Hard,</div> <div><span id="play-text" class="bigger colorChange"> PLAY</span> Hard.</div></h1>
             <h2 id="timer-el" class="colorChange"></h2>
             <div class="buttonsContainer">
                 <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
