Removed onclick from HTML and added onclick event listeners to buttons in JS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1><div><span id="work-text" class="bigger colorChange">WORK</span> Hard,</div> <div><span id="play-text" class="bigger colorChange"> PLAY</span> Hard.</div></h1>
             <h2 id="timer-el" class="colorChange"></h2>
             <div class="buttonsContainer">
-                <button id="work-btn" type="button" onclick="workStart()">Start Working</button>
-                <button id="play-btn" type="button" onclick="playStart()">Start Playing</button>
-                <button id="reset-btn" type="button" onclick="reset()">Reset</button>
+                <button id="work-btn" type="button">Start Working</button>
+                <button id="play-btn" type="button">Start Playing</button>
+                <button id="reset-btn" type="button">Reset</button>
             </div>
             
         </div>
